crates/test-files/fixtures/compile_errors/for_loop_sto_iter_no_copy.fe
contract Foo:
    my_array: u256[3]

    pub def bar():
        for i in self.my_array:
            pass